# FilmuCore

./: .dockerignore  .env.example  .gitignore  .pyre_configuration  AGENTS.md  CHANGELOG.md  Dockerfile.local  LICENSE  LINUX_UNIX_README.md  QUICK_START.md  README.md  WINDOWS_README.md  _run_targeted_tests.sh  check_rtn.py  check_windows_stack.ps1  docker-compose.local.yml  docker-compose.windows.yml  docker-compose.yml  login_page.html  package.json  pyproject.toml  pyrightconfig.json  release-please-config.json  run_playback_gate_ci.sh  test_db.py
.githooks/: commit-msg  pre-push
.github/: FUNDING.yml
docs/: .Debrids.MD  ARCHITECTURE.md  AUTH.md  CACHE.md  CHANGELOG.md  ENTERPRISE_GRADE_AUDIT_2026_04_09.md  EXECUTION_PLAN.md  FILMUCORE_BACKEND_AUDIT_FOR_FILMUDIRECTOR.md  FILMUVFS_LINUX_HOST_VALIDATION_RUNBOOK.md  FILMU_WORD_AUDIT.md  FRONTEND_API_DIRECTION.md  FRONTEND_API_KEYS.md  FRONTEND_PLATFORM_STRATEGY.md  FULL_AUDIT_REPORT.md  GRAPHQL_DIRECTOR_TODO.md  HYBRID_EVENT_BACKPLANE_RESEARCH.md  LOCAL_DOCKER_STACK.md  LOCAL_DOCKER_TROUBLESHOOTING.md  LOCAL_FRONTEND_TESTING_READINESS.md  OBSERVABILITY_PLATFORM_PROMPT_AUDIT_2026_04_09.md  OPERATIONS_PROGRAM.md  OPERATOR_LOG_PIPELINE.md  ORCHESTRATION.md  PLAYBACK_GATE_RUNNER_SETUP.md  PLUGINS.md  PLUGIN_DISTRIBUTION_POLICY.md  PLUGIN_QUICKSTART.md  PLUGIN_SDK.md  QUICK_START.md  RATE_LIMITING.md  README.md  RELEASE_PROCESS.md  RIVEN_TS_AUDIT.md  RIVEN_TS_CLOSED_PRS_AUDIT_2026_04_12.md  RIVEN_TS_RUST_VFS_BRANCH_AUDIT.md  RIVEN_TS_SHOW_COMPLETION_BEHAVIOR.md  RIVEN_TS_UPSTREAM_DELTA_2026_04_06.md  SCRAPE_CANDIDATE_SIZE_PERSISTENCE.md  STANDALONE_EXPORT.md  STATUS.md  (+8 more)
filmu_py/: __init__.py  app.py  audit.py  authz.py  config.py  logging.py  main.py  middleware.py  observability.py  observability_contract.py  observability_convergence.py  proto_codegen.py  resources.py
rust/filmuvfs/: Cargo.toml  Dockerfile.local  build.rs
rust/filmuvfs/scripts/: persistent_mount_status.sh  run_manual_mount_smoke.sh  run_mount_lifecycle_gate.sh  start_persistent_mount.sh  stop_persistent_mount.sh
rust/filmuvfs/src/: cache.rs  capabilities.rs  chunk_engine.rs  chunk_planner.rs  config.rs  cross_process_observability.rs  hidden_paths.rs  lib.rs  main.rs  media_path.rs  mount.rs  prefetch.rs  proto.rs  runtime.rs  telemetry.rs  upstream.rs  windows_host.rs  windows_projfs.rs  windows_winfsp.rs
rust/filmuvfs/src/catalog/: client.rs  state.rs
rust/filmuvfs/tests/: cache.rs  catalog_state.rs  common.rs  hidden_paths.rs  mount_lifecycle.rs  prefetch.rs  proto_contract.rs  read_path.rs
rust/filmuvfs/tests/fixtures/: python_fresh_file_entry.hex
scripts/: capture_enterprise_rollout_evidence.ps1  capture_rollout_evidence.ps1  check_branch_hygiene.ps1  check_docs_runtime_contract.ps1  check_enterprise_rollout_continuity.ps1  check_forbidden_publish_paths.ps1  check_github_main_policy.ps1  check_log_pipeline_contract.ps1  check_mount_http_chunk_parity.ps1  check_operator_log_pipeline_rollout.ps1  check_playback_gate_runner.ps1  check_playback_stability_trends.ps1  check_publish_hygiene.ps1  check_release_provenance_perf_chaos_gate.ps1  check_rollout_continuity.ps1  check_rust_format.ps1  check_windows_vfs_soak_trends.ps1  generate_release_provenance_perf_chaos_evidence.ps1  install_git_hooks.ps1  new_codex_branch.ps1  normalize_commit_message.ps1  preferred_client_playback_proof.mjs  publish_codex_branch.ps1  push_review_branch.ps1  rollout_script_helpers.ps1  run_backup_restore_proof.ps1  run_media_server_proof_gate.ps1  run_playback_proof.ps1  run_playback_proof.ps1.codex-broken-backup  run_playback_proof.ps1.codex-pre-plex-playbackstart.bak  run_playback_proof.ps1.codex-pre-plex-wsl-fix.bak  run_playback_proof_stability.ps1  run_python_tests_ci.sh  run_windows_media_server_gate.ps1  run_windows_vfs_multi_environment_gate.ps1  run_windows_vfs_soak.ps1  run_windows_vfs_soak_program.ps1  run_windows_vfs_soak_stability.ps1  stack_mode_common.ps1  start_local_stack.ps1  (+12 more)
tests/: conftest.py  db_seed.py  test_api_settings_routes.py  test_app_settings_startup.py  test_authz.py  test_builtin_scraper_plugins.py  test_calendar_routes.py  test_chunk_engine.py  test_chunk_parity_contract.py  test_consumer_playback_activity_service.py  test_control_plane_automation.py  test_control_plane_service.py  test_dashboard_routes.py  test_db_migrations.py  test_db_rehearsal.py  test_db_seed_toolkit.py  test_debrid_client_config.py  test_debrid_download_pipeline.py  test_downloader_account_service.py  test_graphql_e2e_db.py  test_graphql_mutations.py  test_graphql_projections.py  test_graphql_settings.py  test_graphql_subscriptions.py  test_imdb_backfill.py  test_item_poster_projection.py  test_item_request_domain.py  test_item_routes.py  test_listrr_plugin.py  test_mdblist_plugin.py  test_media_entry_persistence_domain.py  test_media_server_notifier.py  test_media_service_listing.py  test_media_specialization_domain.py  test_mount_worker.py  test_observability.py  (+45 more)
(+201 files in other folders)
