[package]
name = "filmuvfs"
version = "0.14.0"
edition = "2021"
description = "Rust FilmuVFS sidecar scaffold focused on WatchCatalog runtime consumption"
license = "MIT"
build = "build.rs"

[lib]
name = "filmuvfs"
path = "src/lib.rs"

[[bin]]
name = "filmuvfs"
path = "src/main.rs"

[features]
integration-tests = []

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
async-stream = "0.3.6"
bytes = "1.11.1"
dashmap = "6"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["client", "http1", "http2"] }
hyper-rustls = { version = "0.27.7", default-features = false, features = ["http1", "http2", "ring", "webpki-roots"] }
hyper-util = { version = "0.1.18", features = ["client", "client-legacy", "http1", "http2", "tokio"] }
moka = { version = "0.12.14", features = ["future", "sync"] }
opentelemetry = { version = "0.31.0", features = ["metrics"] }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "metrics", "trace"] }
opentelemetry_sdk = { version = "0.31.0", features = ["metrics", "rt-tokio"] }
prost = "0.14.3"
prost-types = "0.14.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sled = "0.34.7"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = "0.7.18"
tonic = { version = "0.14.5", features = ["transport"] }
tonic-prost = "0.14.5"
tracing = "0.1.44"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }

[target.'cfg(unix)'.dependencies]
fuse3 = { version = "0.9.0", features = ["tokio-runtime"] }
futures-util = "0.3.32"
libc = "0.2.183"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_Storage_ProjectedFileSystem"] }
winfsp_wrs = { path = "../vendor/winfsp_wrs-0.4.1", features = ["debug"] }
winfsp_wrs_sys = "0.4.1"

[build-dependencies]
protoc-bin-vendored = "3.2.0"
tonic-prost-build = "0.14.5"
winfsp_wrs_build = "0.4.1"

[dev-dependencies]
tempfile = "3.23.0"
tokio-stream = { version = "0.1.17", features = ["net"] }
